# phoenix-v2

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  TODO  build_foxos.sh  container.bat  cpuv2.circ  fill.c  install_tools.sh  phoenix.circ  phoenix_old.circ  phoenix_specs.txt  phoenixv2_specs.txt  specs.txt
assembler/: Makefile  generator.cpp  instruction.c  lexer.cpp  main.cpp
examples/: Makefile  arduino_led.asm  blink.asm  blink_slow.asm  blink_slow_p3.asm  clean.asm  cond_jmp.asm  count.asm  count_to_0xf0.asm  diff.ts  direct_jump.asm  fg.asm  fib.asm  fib_loop.asm  gfs.asm  gm2.json  halt.asm  interrupt_blink.asm  interrupt_blink_nohalt.asm  interrupt_in.asm  interrupts.asm  io.asm  jmp.asm  jmp_test.asm.no  log.txt  memory.asm  registers.asm  software_interrupt.asm  software_interrupts_p3.asm  stack.asm  subproc.asm  sum.asm  test.asm  timer.asm  timer_intr.asm  timer_pulse.asm  timer_toggle.asm  timer_toggle_slow.asm
instructions/: add.txt  cmp.txt  inp.txt  jeq.txt  jmp.txt  jnq.txt  jnz.txt  jzr.txt  lad.txt  ldr.txt  lod.txt  mov.txt  nad.txt  nop.txt  nor.txt  out.txt  sub.txt  wtr.txt
tools/: Makefile  build_foxos.sh  build_img_foxos.sh  cpu.h  cpu_disasm.h  (+8 more)
tools/pico_emulator/: CMakeLists.txt  compile_flags.txt  debug.c  main.c  programing.c  readline.c  setclock.c
tools/pico_emulator/client/: cli.py  client.py  format.py  tunnel.py  upload.py
tools/pico_emulator/include/: programing.h  readline.h  setclock.h
tools/pico_emulator/scripts/: build.sh  cf_gen.sh  cf_gen.ts  debug.sh  flash.sh  flash_ocd.sh  install_tools.sh  monitor.sh
(+158 files in other folders)
